# ai-hardware-codesign-playground

./: .dockerignore  .editorconfig  .env.example  .env.production.template  .gitignore  .markdownlint.json  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_QUANTUM_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_RESEARCH_PAPER.md  CHANGELOG.md  CHECKPOINT_IMPLEMENTATION_SUMMARY.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  GENERATION_2_ROBUSTNESS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE_HEADER.txt  Makefile  PROJECT_CHARTER.md  README.md  REQUIREMENTS.md  RESEARCH_BREAKTHROUGH_REPORT.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  SENTIMENT_ANALYSIS_IMPLEMENTATION.md  SETUP_REQUIRED.md  adaptive_scaling_test.py  compliance.db  comprehensive_quality_gates.py  comprehensive_quality_gates_validator.py  (+40 more)
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  performance.md  security.md
.github/workflows/: ci.yml  compliance.yml  performance.yml  security.yml
backend/: Dockerfile  __init__.py  main.py
backend/codesign_playground/: __init__.py  advanced_ml_sentiment.py  api_sentiment.py  cli.py  cli_sentiment.py  ml_sentiment_analyzer.py  sentiment_analyzer.py  sentiment_monitoring.py  server.py  worker.py
backend/codesign_playground/core/: __init__.py  accelerator.py  adaptive_learning.py  advanced_modeling.py  advanced_monitoring.py  auto_scaling.py  autonomous_design_agent.py  cache.py  concurrent_engine.py  database_optimization.py  distributed_computing.py  edge_computing.py  explorer.py  federated_learning.py  hardware_modeling.py  hyperscale_optimizer.py  intelligent_auto_scaling.py  intelligent_scaling.py  ml_acceleration.py  neuromorphic_computing.py  optimizer.py  performance.py  performance_optimizer.py  quantum_enhanced_optimizer.py  (+6 more)
codesign/: __init__.py  architecture.py  estimator.py  hardware.py  optimizer.py  roofline.py
data/: README.md
deployment/: docker-compose.monitoring.yml
deployment/kubernetes/: application-deployments.yaml  autoscaling-and-policies.yaml  database-deployments.yaml  namespace-and-rbac.yaml  network-policies.yaml  production-enhanced.yaml  production.yaml  secrets-and-config.yaml  storage-classes.yaml
docker/: backup.dockerfile  compliance.dockerfile  production-enhanced.dockerfile  production.dockerfile
docs/: API.md  API_REFERENCE.md  BUSINESS_EXECUTIVE_GUIDE.md  COMPLIANCE.md  COMPLIANCE_LEGAL_GUIDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE_COMPLETE.md  DEVELOPMENT.md  GITHUB_WORKFLOWS_SETUP.md  MONITORING.md  OPERATIONS_DEPLOYMENT_GUIDE.md  README.md  REPOSITORY_SETUP.md  RESEARCH_ACADEMIC_GUIDE.md  ROADMAP.md  SBOM.md  SETUP_REQUIRED.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_SPECIFICATIONS_REFERENCE.md  THREE_GENERATION_ENHANCEMENT_GUIDE.md  USER_GUIDE.md  USER_GUIDE_COMPLETE.md  WORKFLOW_ACTIVATION_GUIDE.md
docs/adr/: 0001-architecture-decision-records.md  0002-python-as-primary-language.md  0003-modular-plugin-architecture.md  001-architecture-decisions.md  002-technology-stack.md
docs/guides/: README.md
docs/operations/: DISASTER_RECOVERY_PLAYBOOK.md  OPERATIONAL_RUNBOOK.md  PRODUCTION_DEPLOYMENT_GUIDE.md
docs/workflows/: ACTIVATION_GUIDE.md  README.md  manual-setup.md
frontend/: package.json
hardware/: __init__.py
infrastructure/global-deployment/: cloudfront-distribution.tf  multi-region-deployment.yaml
infrastructure/terraform/: main.tf  terraform.tfvars.example  variables.tf
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana-dashboards/: backend-performance.json
monitoring/prometheus/: prometheus-production.yml
nginx/: nginx.conf
notebooks/: README.md
production_deployment/cicd/: github-actions.yml
production_deployment/database/: backup.sh  init.sql
production_deployment/docker/: Dockerfile.production  docker-compose.production.yml
production_deployment/infrastructure/: main.tf  prometheus-values.yaml
production_deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml  service.yaml
production_deployment/monitoring/: alert_rules.yml  prometheus.yml
production_deployment/scripts/: deploy.sh  rollback.sh
production_deployment/security/: network-policy.yaml  pod-security-policy.yaml  security-scanning.yaml
scripts/: activate-workflows.sh  backup-restore.sh  collect-metrics.sh  entrypoint.sh  generate-dashboard.py  health-check.sh  repository-health-check.sh  repository-setup.sh  run-quality-gates.sh  setup.sh  validate-sdlc-implementation.sh
security/: production-security-policies.yaml  vault-configuration.yaml
tests/: README.md  __init__.py  conftest.py  test_architecture.py  test_autonomous_sdlc_implementation.py  test_estimator.py  test_hardware.py  test_optimizer.py
tests/benchmarks/: __init__.py  test_performance.py
tests/e2e/: test_example_e2e.py
tests/fixtures/: README.md  hardware_fixtures.py  model_fixtures.py
tests/integration/: test_api_endpoints.py  test_core_integration.py  test_end_to_end_workflows.py  test_example_integration.py
tests/performance/: artillery.yml  locustfile.py  test_benchmark_example.py  test_comprehensive_benchmarks.py  test_sla_validation.py
tests/production/: test_production_readiness.py
tests/quality_gates/: test_automated_quality_pipeline.py
tests/research/: test_research_quality_validation.py
tests/robustness/: test_chaos_engineering.py  test_compliance_validation.py  test_performance.py  test_security.py
tests/security/: test_advanced_penetration.py
tests/unit/: test_accelerator.py  test_example.py  test_explorer.py  test_memory_management.py  test_monitoring.py  test_optimizer.py  test_sample.py  test_sentiment_analyzer.py  test_validation.py  test_workflow.py
(+49 files in other folders)
